update for header

--- a/nts.uk/uk.base/base.web/nts.uk.com.js.web/src/main/webapp/lib/nittsu/ui/style/sass/components/_treegridview.scss
+++ b/nts.uk/uk.base/base.web/nts.uk.com.js.web/src/main/webapp/lib/nittsu/ui/style/sass/components/_treegridview.scss
@@ -29,7 +29,11 @@
 
 .no-selector {
 	table {
-		th:first-child.ui-iggrid-rowselector-class{
+		th:first-child.ui-iggrid-rowselector-class {
+			visibility: hidden;
+		}
+		
+		th:first-child.ui-iggrid-rowselector-header {
 			visibility: hidden;
 		}
 	}
