--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/018/a/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/018/a/index.xhtml
@@ -24,7 +24,7 @@
             <button data-bind="click: registration, enable: $root.errors.isEmpty"
                     tabindex="1" class="proceed">#{i18n.getText('QMM018_1')}</button>
             <!-- A1_2 -->
-            <button data-bind="click: correctionLog, enable: true"
+            <button data-bind="click: correctionLog, enable: false"
                     tabindex="2">#{i18n.getText('QMM018_2')}</button>
         </div>
         <div id="contents-area" style="display: flex; margin-left: 60px; min-width: 1200px;">
