--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/031/e/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/031/e/index.xhtml
@@ -14,7 +14,7 @@
         <script type='text/javascript'>
             var dialogSize = {
                 width: 400,
-                height: 180
+                height: 190
             };
         </script>
         <com:scriptfile set="IGNITE"/>
@@ -28,10 +28,10 @@
             <!-- E1_1 -->
             <div class="label" style="white-space: normal;">#{i18n.getText('QMM031_30')}</div>
         </div>
-        <div id="functions-area-bottom" style="height: 45px;">
+        <div id="functions-area-bottom" style="height: 55px;">
             <!-- E1_2-->
             <button data-bind="click: execution"
-                    tabindex="1" class="proceed">#{i18n.getText('QMM031_31')}</button>
+                    tabindex="1" class="btn-default proceed x-large">#{i18n.getText('QMM031_31')}</button>
             <!-- E1_3 -->
             <button id="E1_3" data-bind="click: close"
                     tabindex="2">#{i18n.getText('QMM031_32')}</button>
