--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/031/a/contentsB.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/031/a/contentsB.xhtml
@@ -4,7 +4,7 @@
                 xmlns:com="http://xmlns.jcp.org/jsf/component"
                 xmlns:h="http://xmlns.jcp.org/jsf/html">
     <div class="table" style="width: 1100px;">
-        <div class="cell valign-top" style="padding: 25px; width: 500px;">
+        <div class="cell valign-top" style="padding-top: 25px; padding-left: 25px; width: 500px;">
             <div id="B1_1" class="panel"
                  data-bind="ntsPanel:{width: '420px', height: '420px',
                                     direction: 'right',  visible: true, showIcon: true}">
