Fix change #125827 QMM042, #125603 QMM039

--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/039/a/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/039/a/index.xhtml
@@ -166,7 +166,7 @@
                                 <!--A7_7 履歴開始年月-->
                                 <span class="label" data-bind="text: periodStartYM"/>
                                 <!--A7_8 ～-->
-                                <span class="label">#{i18n.getText('QMM039_24')}</span>
+                                <span class="label" data-bind="text: A7_8"/>
                                 <!--A7_9 履歴開始年月-->
                                 <span class="label" data-bind="text: periodEndYM"/>
                             </div>
