fix bug #101436 form b

--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/007/b/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/007/b/index.xhtml
@@ -50,7 +50,7 @@
 						<tr>
 							<td><img alt="" src="72.png" /></td>
 							<td><div class="pad_5">
-									<input tabindex="2" id="password-input"
+									<input autocomplete="new-password" tabindex="2" id="password-input"
 										data-bind="ntsTextEditor: {
 											name: '#{i18n.getText('CCG007_2')}',
 											value: password,
