fix bug #101436 form c,d

--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/007/c/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/007/c/index.xhtml
@@ -61,7 +61,7 @@
 						<tr>
 							<td><img alt="" src="72.png" /></td>
 							<td colspan="3" class="pad_5"><div>
-									<input tabindex="3" id="password-input"
+									<input autocomplete="new-password" tabindex="3" id="password-input"
 										data-bind="ntsTextEditor: {
 										name: '#{i18n.getText('CCG007_2')}',
 										value: password,
