--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/007/d/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/007/d/index.xhtml
@@ -59,7 +59,7 @@
 						<tr>
 							<td><div data-bind="text: '#{i18n.getText('CCG007_2')}'"></div></td>
 							<td class="pad_5" style="padding-left: 10px"><div>
-									<input tabindex="3" id="password-input"
+									<input tabindex="3" autocomplete="new-password" id="password-input"
 										data-bind="ntsTextEditor: {
 										name: '#{i18n.getText('CCG007_2')}',
 										value: password,
