--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/025/a/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/025/a/index.xhtml
@@ -7,6 +7,10 @@
 <body>
 <ui:composition template="../../../../master/base.xhtml">
     <ui:define name="htmlHead">
+        <com:ValidatorScript>
+            nts.uk.ctx.at.shared.dom.common.time.AttendanceTimeMonth
+            nts.uk.ctx.pr.core.dom.emprsdttaxinfo.amountinfo.ResidentTax
+        </com:ValidatorScript>
         <com:scriptfile set="IGNITE"/>
         <com:scriptfile path="qmm025.a.service.js"/>
         <com:scriptfile path="qmm025.a.vm.js"/>
@@ -18,50 +22,53 @@
         <com:scriptfile path="/view/kcp/share/tree.js" of="/nts.uk.com.web"/>
         <com:scriptfile path="/view/ccg/share/ccg.service.js" of="/nts.uk.com.web"/>
         <com:scriptfile path="/view/ccg/share/ccg.vm.js" of="/nts.uk.com.web"/>
-
-        <com:ValidatorScript>
-            nts.uk.ctx.at.shared.dom.common.time.AttendanceTimeMonth
-        </com:ValidatorScript>
     </ui:define>
 
     <ui:define name="content">
         <div id="functions-area">
-            <button class="proceed" data-bind="click: registerAmount">#{i18n.getText('QMM025_1')}</button>
-            <button>#{i18n.getText('QMM025_2')}</button>
-            <a class="goout" data-bind="ntsLinkButton: { jump: 'linkbutton.xhtml' }">#{i18n.getText('QMM025_3')}</a>
+            <!--A1_1-->
+            <button tabindex="1" class="proceed" data-bind="click: registerAmount">#{i18n.getText('QMM025_1')}</button>
+            <!--A1_2-->
+            <button tabindex="2" data-bind="click: test, enable: true">#{i18n.getText('QMM025_2')}</button>
+            <!--A1_3-->
+            <a class="goout" tabindex="3"
+               data-bind="ntsLinkButton: { action: jumpToCps001 }">#{i18n.getText('QMM025_3')}</a>
         </div>
         <div id="contents-area">
-            <div id="com-ccg001"></div>
+            <!--A2_7-->
+            <div id="com-ccg001" tabindex="6"></div>
             <div id="content-qmm">
+                <!--A2_1-->
                 <div id="A2_1" class="panel panel-frame">
                     <div class="table">
                         <div class="cell valign-center">
+                            <!--A2_2-->
                             <div data-bind="ntsFormLabel: { required: false }">#{i18n.getText('QMM025_4')}</div>
                         </div>
                         <div class="cell valign-center">
-                            <div data-bind="ntsDatePicker: {value: year, dateFormat: 'YYYY'}"></div>
+                            <!--A2_3-->
+                            <div id="A2_3" tabindex="4" data-bind="ntsDatePicker: {value: year, dateFormat: 'YYYY'}"></div>
                         </div>
                         <div class="cell valign-center">
+                            <!--A2_4-->
                             <div class="label" data-bind="text: japanYear()"></div>
                         </div>
                         <div class="cell valign-center">
+                            <!--A2_5-->
                             <div class="label">#{i18n.getText('QMM025_5')}</div>
                         </div>
                         <div class="cell valign-center">
-                            <button id="A2_6" class="small" data-bind="click: getEmpAmount">#{i18n.getText('QMM025_6')}</button>
+                            <!--A2_6-->
+                            <button id="A2_6" tabindex="5" class="small"
+                                    data-bind="click: getEmpAmount">#{i18n.getText('QMM025_6')}</button>
                         </div>
                     </div>
                 </div>
-                <button id="A2_8" class="danger" data-bind="click: deleteAmount">#{i18n.getText('QMM025_7')}</button>
-                <table id="grid"></table>
-                <!--<table id="single-list" data-bind="ntsGridList: {
-                    rows: 12,
-                    dataSource: empAmountItems,
-                    primaryKey: 'sid',
-                    columns: columns,
-                    multiple: true,
-                    value: currentSidItems
-                }"></table>-->
+                <!--A2_8-->
+                <button id="A2_8" tabindex="7" class="danger"
+                        data-bind="click: deleteAmount">#{i18n.getText('QMM025_7')}</button>
+                <!--A3_1-->
+                <table id="grid" tabindex="8"></table>
             </div>
         </div>
     </ui:define>
