--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/025/a/qmm025.a.style.css
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/025/a/qmm025.a.style.css
@@ -14,7 +14,11 @@
     padding-right: 10px;
 }
 
-#A2_8{
+#A2_8 {
     margin-top: 5px;
     margin-bottom: 10px;
+}
+
+#grid .delete {
+    background-color: #ff0000;
 }
