--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/019/b/qmm019.b.style.css
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/019/b/qmm019.b.style.css
@@ -2,6 +2,10 @@
     padding: 20px !important;
 }
 
+#B1_3 {
+    margin-right: 10px;
+}
+
 #B1_2, #B1_5, #B1_9 {
     width: 120px;
 }
@@ -14,6 +18,11 @@
     display: inline-block;
 }
 
+#B1_7_wrap {
+    display: inline-block;
+    min-width: 120px;
+}
+
 #B1_9 {
     vertical-align: top;
 }
@@ -21,4 +30,8 @@
 .ntsRadioBox {
     display: block !important;
     margin-top: 8px;
+}
+
+.pull-right {
+    float: right;
 }
