--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/019/h/qmm019.h.style.css
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/019/h/qmm019.h.style.css
@@ -1,3 +1,7 @@
+#contents-area {
+    padding-left: 20px !important;
+}
+
 .table {
     width: 800px;
     margin-top: 10px;
@@ -23,4 +27,20 @@
 
 .table3 .cell:nth-child(2) {
     width: 630px;
+}
+
+.ntsRadioBox:first-child {
+    margin-bottom: 10px;
+}
+
+#H1_5, #H1_7 {
+    margin-top: 25px;
+}
+
+#H1_8 {
+    margin-left: 30px;
+}
+
+#H1_9, #H1_12, #H1_15 {
+    width: 200px;
 }
