--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/039/a/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/039/a/index.xhtml
@@ -99,7 +99,7 @@
                         </div>
                         <!--A5_1 履歴選択パネル-->
                         <div class="panel cf"
-                             data-bind="ntsPanel:{width: '270px', height: '215px', direction: 'none', visible: true}">
+                             data-bind="ntsPanel:{width: '270px', direction: 'none', visible: true}">
                             <div class="row margin-bottom-12">
                                 <div class="cell left">
                                     <!--A5_2 履歴追加-->
@@ -122,7 +122,7 @@
                                     multiple: false,
                                     value: selectedHisCode,
                                     enable: true,
-                                    rows: 6,
+                                    rows: 5,
                                     columns: columns
                                     }"/>
                         </div>
