KTG002 ThanhPV fix bug: 102779

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/ktg/002/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/ktg/002/a/index.xhtml
@@ -7,10 +7,10 @@
 <body>
 	<ui:composition template="../../../../master/freelayout.xhtml">
 		<ui:define name="htmlHead">
-			<com:stylefile path="/view/ktg/002/a/ktg002.a.style.css" of="/nts.uk.at.web" />
-			<com:scriptfile path="/view/ktg/002/a/ktg002.a.service.js" of="/nts.uk.at.web"  />
-			<com:scriptfile path="/view/ktg/002/a/ktg002.a.vm.js" of="/nts.uk.at.web"  />
-			<com:scriptfile path="/view/ktg/002/a/ktg002.a.start.js" of="/nts.uk.at.web"  />
+			<com:stylefile path="ktg002.a.style.css" />
+			<com:scriptfile path="ktg002.a.service.js" />
+			<com:scriptfile path="ktg002.a.vm.js" />
+			<com:scriptfile path="ktg002.a.start.js" />
 		</ui:define>
 
 		<ui:define name="content">
