fixbug #101436 update save local storage

--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/007/d/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/007/d/index.xhtml
@@ -24,7 +24,7 @@
 						<tr style="height: 40px">
 							<td></td>
 							<td class="pad_5" style="padding-left: 10px">
-								<div tabindex="1" id="combo-box"
+								<div tabindex="1" id="company-code-select"
 									data-bind="ntsComboBox: {
 										width: '250px',
 										name: '#{i18n.getText('CCG007_7')}',
