--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/041/b/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/041/b/index.xhtml
@@ -31,7 +31,7 @@
                     <div tabindex="1"
                          id="B1_4"
                          data-bind="ntsDatePicker: {
-                             value: yearMonthStart,
+                             value: startYm,
                              dateFormat: 'yearmonth',
                              required: true,
                              name : '#[QMM041_16]' }"/>
@@ -49,10 +49,10 @@
                          id="B1_7"
                          data-bind="ntsRadioBoxGroup: {
                                 name:'#[#QMM041_22]',
-                                options: takeoverItem,
+                                options: takeOverItem,
                                 optionsValue: 'value',
                                 optionsText: 'name',
-                                value: takeoverMethod
+                                value: takeOverMethod
                          }"/>
                 </div>
             </div>
