--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/025/a/qmm025.a.style.css
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/025/a/qmm025.a.style.css
@@ -7,7 +7,8 @@
 }
 
 #content-qmm {
-    margin-left: 70px;
+    width: 1170px;
+    margin-left: 75px;
 }
 
 #A2_1 .cell {
@@ -21,4 +22,8 @@
 
 #grid .delete {
     background-color: #ff0000;
+}
+
+.nts-grid-sheet-buttons {
+    display: none;
 }
